--- a/client/src/pages/chat.css
+++ b/client/src/pages/chat.css
@@ -3,7 +3,11 @@
     height: 10px;
 }
 
-.headImg {
-    width: 40px;
-    height: 10px;
+#chatPage {
+    height: 100%;
+    display: flex;
+}
+
+#workspace {
+    flex-grow: 1;
 }
