--- a/client/src/components/sidebar.css
+++ b/client/src/components/sidebar.css
@@ -1,11 +1,19 @@
 .sidebar {
-    max-width: 300px;
-    width: 260px;
+    max-width: 260px;
     padding: 12px;
     background-color: var(--bs-gray-900);
     color: white;
     font-size: 0.875rem;
     flex-grow: 2;
+    position: sticky;
+    min-width: 260px;
+    height: 100vh;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column; 
+    gap: 1rem;
+    overflow: auto;
 }
 
 #newCaseButton {
