--- a/client/src/components/sidebar.css
+++ b/client/src/components/sidebar.css
@@ -1,3 +1,10 @@
+@media (max-width: 768px) {
+    .sidebar {
+      display: none;
+      width: 0;
+    }
+  }
+
 .sidebar {
     max-width: 260px;
     padding: 12px;
@@ -30,8 +37,13 @@
 .caseItem {
     margin-bottom: 4px;
     padding: 12px;
-    border-style: solid;
+    border-style: none;
     border-width: 1px;
     border-color: var(--bs-secondary-color);
     border-radius: 8px;
+}
+
+.caseItem:hover{
+    background-color: var(--bs-gray-800);
+    cursor: pointer;
 }
