--- a/client/src/components/sidebar.css
+++ b/client/src/components/sidebar.css
@@ -47,3 +47,7 @@
     background-color: var(--bs-gray-800);
     cursor: pointer;
 }
+
+.caseItem:active{
+    background-color: var(--bs-gray-800);
+}
