--- a/client/src/pages/chat.css
+++ b/client/src/pages/chat.css
@@ -62,12 +62,16 @@
   margin-right: 1rem;
   border-radius: 0.1rem;
   height: 100%;
-  background-color: rgb(240, 248, 255, 0);
+  background-color: rgba(14, 60, 100, 0);
   background-size: cover;
 }
 
+.boticon {
+    border-radius: 200px;
+}
+
 .usericon {
-    margin-left: .3rem;
+    margin-left: 0rem;
 }
 
 .caseButton.selected {
