Fix Already Fixed Changes That Got Overwritten ?

--- a/client/src/components/sidebar.css
+++ b/client/src/components/sidebar.css
@@ -84,3 +84,9 @@
 .drag {
     margin-bottom: 20px;
 }
+
+.loadingBar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
