--- a/client/src/pages/chat.css
+++ b/client/src/pages/chat.css
@@ -26,9 +26,12 @@
 	}
 }
 
+
 .generatebutton svg {
-    width: 10px;
-    height: 10px;
+    width: 20px;
+    height: 20px;
+    margin-top: 6px;
+    color: black;
 }
 
 #chatPage {
@@ -85,7 +88,7 @@
     height: 10rem;
     align-items: center;
     justify-content: center;
-    font-family:  'Raleway', sans-serif;
+    font-family:  'Open Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 700;   
     gap: 2rem;
     color: rgb(0, 0, 0);
@@ -115,3 +118,4 @@
     padding: 16px;  
     height: 98px;
 }
+
