--- a/client/src/App.css
+++ b/client/src/App.css
@@ -169,7 +169,7 @@
 
 .markdown {
   margin-top: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid #0F5099;
   border-radius: 5px;
   padding: 10px;
 }
