--- a/client/src/components/message.css
+++ b/client/src/components/message.css
@@ -5,3 +5,141 @@
 .messageList {
     margin-bottom: 5rem;
 }
+
+.apimessage {
+    position: relative;
+    color: #fff;
+    padding: 10px 15px;
+    border-radius: 15px;
+    max-width: 75%;
+    margin: 10px 0;
+    margin-left: 1rem;
+    font-weight: 600;
+}
+
+
+.usermessage {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    max-width: 75%; 
+    margin: 10px 0;
+    margin-left: 1rem;
+    font-weight: 600;
+  }
+  
+.usermessage > .markdownanswer > p {
+    color: #FFFFFF;
+  }
+  
+.usermessagewaiting {
+    padding: 1.5rem;
+    color: #000;
+    background: linear-gradient(to left, #07080938, #1a1c2024, #07080936);
+    background-size: 200% 200%;
+    background-position: -100% 0;
+    animation: loading-gradient 2s ease-in-out infinite;
+    animation-direction: alternate;
+    animation-name: loading-gradient;
+}
+
+.textarea {
+    position: relative;
+    resize: none;
+    font-size: 1.1rem;
+    padding: 1rem 2rem 1rem 2rem;
+    width: 75vw;
+    border-radius: 0.5rem;
+    border: 1px solid #d9d9e3;
+    background: #ffffff;
+    color: #000;
+    outline: none;
+}
+  
+.textarea:disabled {
+    opacity: 0.5;
+}
+  
+.textarea:focus {
+    outline: none;
+    border-color: #6b7280;
+    box-shadow: 0 0 0 3px rgba(156, 163, 175, 0.5);
+}
+  
+.textarea::placeholder {
+    color: #000;
+}
+
+.botHeader {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.boticon {
+    border-radius: 50%;
+    border-radius: 80px;
+}
+
+.usericon {
+    border-radius: 50%;
+    margin-left: .3rem;
+}
+
+/* markdown styles */
+.markdownanswer {
+    margin-top: 5px;
+    flex-grow: 2;
+    border-radius: 15px;
+    padding: 5px 15px;
+    background-color: #0F5099;
+}
+
+.botmarkdownanswer {
+    margin-top: 5px;
+    flex-grow: 2;
+    border-radius: 15px;
+    padding: 5px 15px;
+    background-color: #ffffff;
+    color: black;
+}
+
+.markdownanswer p, .botmarkdownanswer p {
+    margin-bottom: 0;
+    padding: 10px 15px;
+}
+  
+.markdown {
+    margin-top: 10px;
+    border: 1px solid #0F5099;
+    border-radius: 5px;
+    padding: 10px;
+}
+  
+.markdownanswer a:hover {
+    opacity: 0.8;
+}
+  
+.markdownanswer a {
+    color: #b13a3a;
+    font-weight: 500;
+}
+
+.markdownanswer code {
+    color: #15cb19;
+    font-weight: 500;
+    white-space: pre-wrap !important;
+}
+  
+.markdownanswer ol,
+.markdownanswer ul {
+    margin: 1rem;
+}
+  
+.markdownanswer h1,
+.markdownanswer h2,
+.markdownanswer h3 {
+    font-size: inherit;
+}
